@@ -99,7 +99,7 @@
 <td>Source</td><td></td>
 <td><b>Download 
 <a
-href="ftp://ftp.lilypond.org/pub/LilyPond/v1.7/lilypond-1.8.0.tar.gz">tarball</a>
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.8/lilypond-1.8.0.tar.gz">tarball</a>
 (<a href="../devel/#warning">warning</a>)
 </td>
 <td>
