@@ -46,11 +46,11 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 
 <table rules=cols cellpadding="6%">
 <tr><th><h2>News</h2></th>
-<th><h2>Status</h2></th>
+<th><h2>Quick links</h2></th>
 </tr>
 
 <tr>
-<td width="60%">
+<td width="55%">
 <dl>
   <dt>
     August 7, 2003
@@ -89,21 +89,24 @@ release notes</a> and get it <a href="download/">here</a>.
 <tr>
 <th halign=left>Branch</th>
 <th>version</th>
-<th>link</th>
+<th>jump to</th>
 </tr>
 
 <tr>
 <td>Stable</td>
 <td>1.8.0</td>
-<td><a href=download/#1.8>download</a>,
-<a href=http://lilypond.org/doc/v1.8/>documentation</a></td>
+<td><a href=http://lilypond.org/doc/v1.8/Documentation/out-www/>Documentation</a>,
+<a href=download/#1.8>download</a>.
+</td>
 </tr>
 
 <tr>
 <td>Stable</td>
 <td>1.6.12</td>
-<td><a href=download/#1.6>download</a>,
-<a href=http://lilypond.org/doc/v1.6/>documentation</a></td>
+<td>
+<a href=http://lilypond.org/doc/v1.6/Documentation/out-www/>Documentation</a>,
+<a href=download/#1.6>download</a>.
+</td>
 </tr>
 </table>
 </td>
